// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dmqGxT gVrflo"
>
  <div
    class="sc-eDDNPB CqNni"
  >
    <span
      class="sc-jTrNMu"
    >
      0
    </span>
    <span
      class="sc-gLDxTj fUahvY"
    >
      42
    </span>
  </div>
  <button
    class="sc-beqWul sc-gueWre jxVVcd jZaMhY"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dmqGxT gVrflo"
>
  <div
    class="sc-hLsdIM grXVUV"
  >
    🛌🛌
  </div>
  <button
    class="sc-beqWul sc-gueWre cDltyS jZaMhY"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dmqGxT gVrflo"
>
  <div
    class="sc-hLsdIM grXVUV"
  >
    🍅
  </div>
  <button
    class="sc-beqWul sc-gueWre cDltyS jZaMhY"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dmqGxT gVrflo"
>
  <div
    class="sc-hLsdIM grXVUV"
  >
    🛌
  </div>
  <button
    class="sc-beqWul sc-gueWre cDltyS jZaMhY"
  >
    Start
  </button>
</div>
`;
